# Helldivers2Loader

./: .gitignore  CMakeLists.txt
lib/concurrentQueue/: CMakeLists.txt  blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
src/: CMakeLists.txt  GameGuardPatcher.cpp  GameGuardPatcher.h  Utils.cpp  Utils.h  libcurl.h  version.cpp
src/datatypes/: TargetedPatch.h
staticLibs/Debug/ByteMender/: ByteMender.lib
staticLibs/Debug/ByteMender/include/algorithms/: KmpSearcher.h
staticLibs/Debug/ByteMender/include/datatypes/: Patch.h
staticLibs/Debug/ByteMender/include/memory/: Scanner.h
staticLibs/Debug/ByteMender/include/proxies/: dxgi.h
staticLibs/Debug/ByteMender/include/utils/: Debug.h  Profiler.h  Utils.h
staticLibs/Release/ByteMender/: ByteMender.lib
staticLibs/Release/ByteMender/include/algorithms/: KmpResult.h  KmpSearcher.h
staticLibs/Release/ByteMender/include/datatypes/: Patch.h
staticLibs/Release/ByteMender/include/memory/: Memory.h  Scanner.h
staticLibs/Release/ByteMender/include/proxies/: version.h
staticLibs/Release/ByteMender/include/utils/: Profiler.h
